# multiview_motion_capture

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: gen_code_docs_pages.py  index.md
multiview_pose_estimation/: motion_capture.py  mv_association.py  util.py
