[tool.poetry]
name = "multiview-pose-estimation"
version = "0.4.0"
description = "Padmi Core contains the main solution to get statistics of Padel players in a match."
authors = ["Andrés Matesanz <Matesanz.Cuadrado@gmail.com>"]
packages = [{include = "multiview_pose_estimation"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pycodestyle = {extras = ["toml"], version = "^2.10.0"}
pytest = "^7.1.3"
jupyter = "^1.0.0"
python-semantic-release = "^7.33.0"
sng-cvplot = {version = "^0.6.0", source = "sngular-daiot"}
seaborn = "^0.12.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocstrings-python = "^0.7.1"
mkdocs-material = "^8.4.2"
mkdocs-jupyter = "^0.22.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"

[tool.semantic_release]
version_variable = "multiview_pose_estimation/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
commit_subject = "🔖 v{version}"
commit_parser = "semantic_release.history.emoji_parser"
major_emoji = "💥"  # breaking change
minor_emoji = "✨,🚑,🎉"  # feature, hotfix, begin
patch_emoji = "🐛,🩹,🔒"  # bugfix, simple fix, security

[tool.black]
line_length = 100
max-complexity = 10

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
extend_skip_glob = ["docs/*", "notebooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pydocstyle]
convention = "google"
add-select = ["D400", "D401", "D411"]

[pycodestyle]
max-line-length = 100

[tool.pylint]
    [tool.pylint.main]
    load-plugins=[
        "pylint.extensions.check_elif",
        "pylint.extensions.bad_builtin",
        "pylint.extensions.docparams",
        "pylint.extensions.for_any_all",
        "pylint.extensions.set_membership",
        "pylint.extensions.code_style",
        "pylint.extensions.overlapping_exceptions",
        "pylint.extensions.typing",
        "pylint.extensions.redefined_variable_type",
        "pylint.extensions.comparison_placement"]

    [tool.pylint.messages_control]
    disable = [
        "too-few-public-methods",
        "too-many-arguments",
        "consider-using-assignment-expr"]

    [tool.pylint.TYPECHECK]
    # avoid no-member errors for cv2
    generated-members = 'cv2.*'

    [tool.pylint.BASIC]
    good-names = ["x", "y", "z", "x1", "y1", "z1", "x2", "y2", "z2", "xs", "ys", "zs"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
